--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,43 @@
 # Notes-to-self and temporary/placeholder files
-
 *.txt
 *TEMP-*
+
+# Django and related items (modified from djangowaves.com's ultimate Django gitignore)
+
+# Django #
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+media
+
+# Backup files #
+*.bak
+
+# Python #
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
